src/tests/snapshots/niri__tests__virtual_keyboard__binds_work_with_virtual_keyboard_modifiers_mask.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
binds
app: modifiers: depressed=64, latched=0, locked=0, group=0
mask cleared, physical key
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 16
app: key released: 16
