src/tests/snapshots/niri__tests__virtual_keyboard__identical_keymap_ownership_transfers_between_virtual_keyboards.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
first virtual keyboard key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
second virtual keyboard key
app: key pressed: 21 (z)
app: key released: 21 (z)
first virtual keyboard destroyed
second virtual keyboard key
app: key pressed: 21 (z)
app: key released: 21 (z)
second virtual keyboard destroyed
app: keymap: configured
app: modifiers: depressed=0, latched=0, locked=0, group=0
