src/tests/snapshots/niri__tests__virtual_keyboard__input_method_client_death_with_held_key.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical press, forwarded by ime
app: key pressed: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
ime: key pressed: 16
ime dies
physical release
app: key released: 16
