src/tests/snapshots/niri__tests__virtual_keyboard__input_method_deactivation_keeps_physically_held_modifier.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical press, forwarded by ime
app: key pressed: 125
app: modifiers: depressed=64, latched=0, locked=0, group=0
ime: key pressed: 125
ime: modifiers: depressed=64, latched=0, locked=0, group=0
ime deactivates
physical release
app: key released: 125
app: modifiers: depressed=0, latched=0, locked=0, group=0
