src/tests/snapshots/niri__tests__virtual_keyboard__input_method_forwarded_keys_bypass_grab.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical press
ime: key pressed: 16
ime forwards press
app: key pressed: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
physical release
ime: key released: 16
ime forwards release
app: key released: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
other virtual keyboard press
ime: key pressed: 17
other virtual keyboard release
ime: key released: 17
