src/tests/snapshots/niri__tests__virtual_keyboard__input_method_key_repeat_through_virtual_keyboard.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
physical press, forwarded by ime
app: key pressed: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
ime: key pressed: 16
ime repeats twice
app: key released: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key released: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
physical release
ime: key released: 16
ime forwards release
app: key released: 16
app: modifiers: depressed=0, latched=0, locked=0, group=0
