src/tests/snapshots/niri__tests__virtual_keyboard__locale1_change_while_virtual_keyboard_keymap_active.snap
---
source: src/tests/virtual_keyboard.rs
expression: rv
---
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
locale1 change
app: keymap: locale1
app: modifiers: depressed=0, latched=0, locked=0, group=0
virtual key
app: keymap: virtual
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (z)
app: key released: 21 (z)
physical key
app: keymap: locale1
app: modifiers: depressed=0, latched=0, locked=0, group=0
app: key pressed: 21 (y)
app: key released: 21 (y)
